# DosPlatformGame

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.adoc  arch_setup.sh  build.sh  build_and_run_in_86box.sh  build_installer.sh  ci_build.sh  clean.sh  create_disk_image.sh  create_docker_image.sh  create_hd_image.sh  create_windows_dosbox_package.sh  deploy_to_test.sh  dosbox_launcher.sh  download_current_build.bat  edit_text.sh  generate_test_image.sh  parse_junit_xml.py  rebuild_all.sh  rebuild_levels.bat  regenerate_assets.sh  run_dosbox.sh  run_game.bat  run_game.dosbox_config  run_game.sh  run_game_86box.sh  run_game_create_world_map.dosbox_config  run_game_dos.sh  run_game_sdl.sh  run_game_windows.dosbox_config  sdl_build.sh  test.dosbox_config  test.sh  ubuntu_setup.sh  windows_cross_build.sh  world_map.sh
.circleci/: config.yml
AdpcmEncoder/: CMakeLists.txt  command_line_parser.h  creative_adpcm.md  encode_creative_adpcm_c.cpp  wav2adpcm.sh
AdpcmEncoder/src/: command_line_parser.h  decode_creative_adpcm.h  encode_creative_adpcm.cpp  encode_creative_adpcm.h  encode_creative_adpcm_simd.cpp  file_tools.h  main.cpp  read_wave.cpp  read_wave.h  resampling.cpp  resampling.h  voc_format.cpp  voc_format.h
AdpcmEncoder/src/test/: resampling_test.cpp  test_helper.h
AnimationTool/: animation_tool.py  map_tool.py
Png2Tga/: CMakeLists.txt  main.cpp
TextCompiler/: CMakeLists.txt  main.cpp
WorldMapBuilder/: image.py  world_map_builder.py
box/: create_svg_box_template.py
docs/: README.md  _config.yml  index.markdown
floppy_tools/: generate_floppy_image.sh
fonts/: dejavu8.stf  geo15.stf  lib18.stf  title.stf
hd_template/: copy_from_first_partition.sh  copy_to_first_partition.sh  dos_svar.img.xz  freedos_hd_template.img.xz  game.bat  svardos_template.VHD.xz  svardos_template.img.xz
images/: arrow2.ani  arrow2.ase  arrow2.jsn  arrow2.tga  bullet.ani  bullet.ase  bullet.json  bullet.tga  credits.ase  credits.tga  enemy.ani  enemy.ase  enemy.jsn  enemy.json  enemy.tga  enemy2.ani  enemy2.ase  enemy2.json  enemy2.tga  eye.ani  eye.ase  eye.json  eye.tga  fire.ani  fire.ase  (+47 more)
(+602 files in other folders)
