cmake_minimum_required(VERSION 3.9)
project(adpcm_encoder)
set(CMAKE_CXX_STANDARD 20)
add_executable(adpcm_encoder encode_creative_adpcm_c.cpp ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/vectorclass/instrset_detect.cpp)
target_include_directories(adpcm_encoder PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/)
# target_compile_options(adpcm_encoder PUBLIC -march=native -ggdb -O2 -Wall -Wextra -Wpedantic -Werror)
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(adpcm_encoder PUBLIC OpenMP::OpenMP_CXX)
endif()